<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMemory">

    <EditText
        android:id="@+id/add_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/add_title"/>

    <Button
        android:id="@+id/pick_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_date"
        android:onClick="datePicker"/>

    <TextView
        android:id="@+id/show_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_date"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/add_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_description"
        android:inputType="text" />

    <Button
        android:id="@+id/add_memory_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/add_memory_button" />

    <Button
        android:id="@+id/add_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_picture_button" />

    <ImageView
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:id="@+id/image_view" />


</LinearLayout>